# 4ISMA

./: 4ISMA.cbp  4isma  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
.cmake/api/v1/reply/: cache-v2-2090065b8d14ba264ef8.json  cmakeFiles-v1-5a3129471b8b5463dbb9.json  codemodel-v2-91496b1b5c438e3c67cd.json  codemodel-v2-a7e8ccce1fc033d24a56.json  index-2024-09-28T12-00-11-0551.json  index-2024-10-23T06-22-32-0974.json  target-4isma-Debug-4c0c1d2a93756a17e655.json  target-4isma-Debug-8cd53a68322056369896.json
include/: insur.h  usrs.h
runned/: Button.cpp  insur.cpp  usrs.cpp
